# BlonDe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TERMS_OF_USE  example.py  pyproject.toml  setup.py
BWB/: BWB.py  BWBReader.py  README.md  entity.py  statistics.py
blond/: BlonD.py  dBlonD.py  processing.py
blonde/: .word_frequency_60000_inverse.json.icloud  BlonDe.py  __init__.py  base.py  dBlonDe.py  processing.py  significance.py  utils.py  word_frequency_60000_inverse.json
blonde.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blonde_cli/: score.py
evaluation/: dataset.py  get_bwb_scores.py  get_metric_scores.py
example/: an.txt  example.py  ner.txt  ref.txt  sys.txt  sys2.txt
image/: .blonde_document_scores.png.icloud
other_metrics/: rc.py  ter.py
other_metrics/__pycache__/: ..__init__.cpython-36.pyc.icloud  .rc.cpython-36.pyc.icloud
util/: .format_util.py.icloud  align_bpe.py  csv_util.py  sents2doc_mapping.py
