[project]
name = "blonde"
version = "0.1.2"
authors = [
  { name="Eleanor Jiang", email="eleanorjiang630@gmail.com" },
]
description = "An automatic evaluation metric for document-level machine translation"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[project.urls]
"Homepage" = "https://github.com/EleanorJiang/blonde"
"Bug Tracker" = "https://github.com/EleanorJiang/blonde/issues"